# arquitectura_software_anterior

./: CMakeLists.txt  README.md  package.xml
ball_and_goal/: CMakeLists.txt  ball_and_goal.cpp  ball_and_goal.h  package.xml
ball_and_goal/fsm/: ball_and_goal.bica  ball_and_goal_bica.bica  ball_and_goal_bica.cpp  ball_and_goal_bica.h
ball_and_goal/include/ball_and_goal/: BallAndGoalBica.h  FIndBall.h  FindBall.h  FindBlueGoal.h  Turn.h  Turn.hpp
ball_and_goal/launcher/: ball_and_goal.launch
ball_and_goal/src/: ball_and_goal_bica_node.cpp  ball_and_goal_node.cpp  find_ball_node.cpp  find_blue_goal_node.cpp  find_yellow_goal.cpp  find_yellow_goal_node.cpp  turn_node.cpp
ball_and_goal/src/ball_and_goal/: BallAndGoalBica.cpp  FindBall.cpp  FindBlueGoal.cpp  Turn.cpp
bumper/: CMakeLists.txt  package.xml
bumper/src/: bumper_new_version.cpp  bumper_robot.cpp
laser_go/: CMakeLists.txt  package.xml
laser_go/include/laser_go/: LaserRobot.h
laser_go/src/: laser_robot.cpp  laser_robot_executable.cpp
laser_go/src/laser_go/: LaserRobot.cpp
